...
                              child: Column(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  SizedBox(
                                    width: 310.0,
                                    child: TextFormField(
                                      key: const ValueKey('Login-Email_1v0m'),
                                      controller:
                                          _model.loginEmailTextController,
                                      focusNode: _model.loginEmailFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.loginEmailTextController',
                                        const Duration(milliseconds: 2000),
...
                                          .asValidator(context),
                                    ),
                                  ),
                                  SizedBox(
                                    width: 310.0,
                                    child: TextFormField(
                                      key: const ValueKey('Login-Password_n3i8'),
                                      controller:
                                          _model.loginPasswordTextController,
                                      focusNode: _model.loginPasswordFocusNode,
                                      autofocus: false,
                                      obscureText:
                                          !_model.loginPasswordVisibility,
...
                                    ),
                                  ),
                                ].divide(const SizedBox(height: 20.0)),
                              ),
                            ),
                            FFButtonWidget(
                              key: const ValueKey('Login-Button_badq'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'WELCOME_SCREEN_PAGE_Login-Button_ON_TAP');
                                logFirebaseEvent('Login-Button_validate_form');
                                if (_model.formKey.currentState == null ||
                                    !_model.formKey.currentState!.validate()) {
...
                                logFirebaseEvent('StartGoldenPath');
                                logFirebaseEvent('Login-Button_navigate_to');

                                context.pushNamedAuth(
                                    'homepage', context.mounted);
                              },
                              text: 'Login',
                              options: FFButtonOptions(
                                width: 310.0,
                                height: 55.0,
                                padding: const EdgeInsetsDirectional.fromSTEB(
                                    16.0, 0.0, 16.0, 0.0),
                                iconPadding: const EdgeInsetsDirectional.fromSTEB(
...
                                    'WELCOME_SCREEN_ForgotPassWord_ON_TAP');
                                logFirebaseEvent('ForgotPassWord_navigate_to');

                                context.pushNamed('ForgotPassword');
                              },
                              child: Text(
                                key: const ValueKey('ForgotPassWord_ddwv'),
                                'Forgot Password?',
                                style: FlutterFlowTheme.of(context)
                                    .bodySmall
                                    .override(
                                      fontFamily: FlutterFlowTheme.of(context)
                                          .bodySmallFamily,
...
                                    'WELCOME_SCREEN_PAGE_Signup-Text_ON_TAP');
                                logFirebaseEvent('Signup-Text_navigate_to');

                                context.pushNamed('SignUp');
                              },
                              child: Text(
                                'Sign up',
                                style: FlutterFlowTheme.of(context)
                                    .bodySmall
                                    .override(
                                      fontFamily: FlutterFlowTheme.of(context)
                                          .bodySmallFamily,
                                      color: const Color(0xFF8C52FF),
...
