...
                  child: Align(
                    alignment: const AlignmentDirectional(0.0, 0.0),
                    child: Padding(
                      padding:
                          const EdgeInsetsDirectional.fromSTEB(0.0, 1.0, 0.0, 0.0),
                      child: Column(
                        key: const ValueKey('Column_1jmc'),
                        mainAxisSize: MainAxisSize.max,
                        children: [
                          Padding(
                            padding: const EdgeInsetsDirectional.fromSTEB(
                                0.0, 100.0, 0.0, 50.0),
                            child: ClipRRect(
...
                                height: 116.0,
                                fit: BoxFit.cover,
                              ),
                            ),
                          ),
                          Text(
                            'Your playlist has been generated!',
                            textAlign: TextAlign.center,
                            style: FlutterFlowTheme.of(context)
                                .headlineMedium
                                .override(
                                  fontFamily: FlutterFlowTheme.of(context)
                                      .headlineMediumFamily,
...
                                ),
                          ),
                          Column(
                            mainAxisSize: MainAxisSize.max,
                            children: [
                              FFButtonWidget(
                                key: const ValueKey('viewPlaylist_bdeo'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'GOLDEN_COMPLETE_PAGE_viewPlaylist_ON_TAP');
                                  logFirebaseEvent('viewPlaylist_launch_u_r_l');
                                  await launchURL(FFAppState().spotifyurl);
                                  if (valueOrDefault(
...
                                          'regPlaylist_navigate_to');

                                      context.pushNamed('goldenComplete');

                                      safeSetState(() {});
                                    },
                                    text: 'Regenerate Playlist',
                                    options: FFButtonOptions(
                                      width: 310.0,
                                      height: 55.0,
                                      padding: const EdgeInsetsDirectional.fromSTEB(
                                          16.0, 0.0, 16.0, 0.0),
                                      iconPadding:
...
