...
                      child: Column(
                        mainAxisSize: MainAxisSize.max,
                        children: [
                          SizedBox(
                            width: 310.0,
                            child: TextFormField(
                              key: const ValueKey('Email-Signup_n7lt'),
                              controller: _model.emailSignupTextController,
                              focusNode: _model.emailSignupFocusNode,
                              autofocus: false,
                              obscureText: false,
                              decoration: InputDecoration(
                                isDense: true,
...
                                  .asValidator(context),
                            ),
                          ),
                          SizedBox(
                            width: 310.0,
                            child: TextFormField(
                              key: const ValueKey('Password-Signup_237z'),
                              controller: _model.passwordSignupTextController,
                              focusNode: _model.passwordSignupFocusNode,
                              autofocus: false,
                              obscureText: !_model.passwordSignupVisibility,
                              decoration: InputDecoration(
                                isDense: true,
...
                                  .asValidator(context),
                            ),
                          ),
                          SizedBox(
                            width: 310.0,
                            child: TextFormField(
                              key: const ValueKey('ConfirmPass-Signup_fsnp'),
                              controller:
                                  _model.confirmPassSignupTextController,
                              focusNode: _model.confirmPassSignupFocusNode,
                              autofocus: false,
                              obscureText: !_model.confirmPassSignupVisibility,
                              decoration: InputDecoration(
...
                            ),
                          ),
                        ].divide(const SizedBox(height: 20.0)),
                      ),
                    ),
                    FFButtonWidget(
                      key: const ValueKey('Button_psx0'),
                      onPressed: () async {
                        logFirebaseEvent('SIGN_UP_PAGE_SIGN_UP_BTN_ON_TAP');
                        logFirebaseEvent('Button_validate_form');
                        if (_model.formKey.currentState == null ||
                            !_model.formKey.currentState!.validate()) {
                          return;
...
