...
                          child: Padding(
                            padding: const EdgeInsetsDirectional.fromSTEB(
                                0.0, 0.0, 0.0, 40.0),
                            child: SizedBox(
                              width: 300.0,
                              child: TextFormField(
                                key: const ValueKey('TextField_mbla'),
                                controller: _model.textController,
                                focusNode: _model.textFieldFocusNode,
                                autofocus: false,
                                obscureText: false,
                                decoration: InputDecoration(
                                  isDense: true,
...
                                        letterSpacing: 0.0,
                                        useGoogleFonts: GoogleFonts.asMap()
                                            .containsKey(
                                                FlutterFlowTheme.of(context)
                                                    .labelMediumFamily),
                                      ),
                                  hintText: 'Enter Playlist Prompt...',
                                  hintStyle: FlutterFlowTheme.of(context)
                                      .labelMedium
                                      .override(
                                        fontFamily: FlutterFlowTheme.of(context)
                                            .labelMediumFamily,
                                        letterSpacing: 0.0,
...
                            final generateButtonApiToolsRecord =
                                generateButtonApiToolsRecordList.isNotEmpty
                                    ? generateButtonApiToolsRecordList.first
                                    : null;

                            return FFButtonWidget(
                              key: const ValueKey('generate_button_38tj'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'HOMEPAGE_PAGE_generate_button_ON_TAP');
                                var shouldSetState = false;
                                logFirebaseEvent(
                                    'generate_button_google_analytics_event');
...
